# Jiuj

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: AI编程指导经验.md  Jiuj-PRD.md  Jiuj-架构设计.md
src/: App.tsx  index.css  main.tsx  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  ai.rs  app.rs  items.rs  mod.rs  settings.rs  skills.rs
src-tauri/src/db/: accounts_repo.rs  ai_profiles_repo.rs  database.rs  items_repo.rs  mod.rs  settings_repo.rs  skills_repo.rs  skip_list_repo.rs
src-tauri/src/services/: ai_analyzer.rs  app_scheduler.rs  mail_fetcher.rs  mod.rs  reminder_engine.rs  sanitizer.rs  secret_store.rs  tray_manager.rs
src-tauri/src/skills/: mod.rs  skill_loader.rs
src/components/: ConfirmDialog.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.json  zh-CN.json
src/pages/: AISettings.tsx  Accounts.tsx  Board.tsx  General.tsx  SkillEditor.tsx  Skills.tsx  SkipList.tsx
