[package]
name = "jiuj"
version = "0.1.0"
description = "Jiuj — A lightweight email reminder tool"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.34", features = ["chrono", "bundled"] }
rusqlite_migration = "2.0"
imap = "2.4"
mail-parser = "0.9"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
aes-gcm = "0.10"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
shellexpand = "3.0"
html-escape = "0.2"
dirs = "5.0"
once_cell = "1.0"
base64 = "0.22"
native-tls = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
